--- a/hw3/hw3_b05705043.ipynb
+++ b/hw3/hw3_b05705043.ipynb
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +558,7 @@
     "            self.w = self.w - np.linalg.inv(h).dot(gradient)\n",
     "            \n",
     "            pred = np.where(y > 0.5, 1, 0)\n",
-    "            print(f'acc: {sum(np.equal(pred, t)) / t.shape[0]}')\n",
+    "#             print(f'acc: {sum(np.equal(pred, t)) / t.shape[0]}')\n",
     "    \n",
     "    def predict(self, x):\n",
     "        if self.add_intercept:\n",
@@ -852,6 +852,191 @@
     "print(f'test accuracy: {acc}')\n",
     "print(f'w: {logic3.w}')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q1.4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "split the training data into subtraining and tuning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(27145, 102) (27145,) (3017, 102) (3017,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = train_x.shape[0]*9//10\n",
+    "subtrain_x, subtrain_y = train_x[:m], train_y[:m]\n",
+    "tune_x, tune_y = train_x[m:], train_y[m:]\n",
+    "print(subtrain_x.shape, subtrain_y.shape, tune_x.shape, tune_y.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "決定 regularization coefficient list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reg_coef_list = [0.01, 0.02, 0.05, 0.1, 0.5, 1, 5, 10, 50, 100]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "step 1: constraint that $a_1 = a_2$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test accuracy: 0.8336095459065297\n",
+      "test accuracy: 0.8336095459065297\n",
+      "test accuracy: 0.8336095459065297\n",
+      "test accuracy: 0.843221743453762\n",
+      "test accuracy: 0.8428902883659264\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-83-09bdc31fe484>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mreg_vec\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdiagflat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m6\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_x\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mlogic\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmylogistic_l2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreg_vec\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0mlogic\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msubtrain_x\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msubtrain_y\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0mpredict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlogic\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtune_x\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0macc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mequal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtune_y\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mtune_y\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-82-4f2b3fa64cad>\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, x, t)\u001b[0m\n\u001b[1;32m     27\u001b[0m             \u001b[0mgradient\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreg_vec\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mw\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m             \u001b[0mr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdiagflat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 29\u001b[0;31m             \u001b[0mh\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreg_vec\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     30\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mw\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mw\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mh\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgradient\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "tune_acc = []\n",
+    "for a in reg_coef_list:\n",
+    "    reg_vec = np.diagflat(np.array([a]*6 + [a]*(train_x.shape[1]-6) + [0]))\n",
+    "    logic = mylogistic_l2(reg_vec)\n",
+    "    logic.fit(subtrain_x, subtrain_y)\n",
+    "    predict = logic.predict(tune_x)\n",
+    "    acc = sum(np.equal(predict, tune_y)) / tune_y.shape[0]\n",
+    "    tune_acc.append(acc)\n",
+    "    print(f'test accuracy: {acc}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "step 2: fix $a_1 = a_1^*$ and search $a_2$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "acc: 0.4504343213314767\n",
+      "acc: 0.8378091638485512\n",
+      "acc: 0.8468271334792122\n",
+      "acc: 0.8492805516875539\n",
+      "acc: 0.8496784032889065\n",
+      "acc: 0.8496784032889065\n",
+      "acc: 0.8496452489887939\n",
+      "acc: 0.8496452489887939\n"
+     ]
+    }
+   ],
+   "source": [
+    "tune_acc = []\n",
+    "for a in reg_coef_list:\n",
+    "    reg_vec = np.diagflat(np.array([]*6 + [a]*(train_x.shape[1]-6) + [0]))\n",
+    "    logic = mylogistic_l2(reg_vec)\n",
+    "    logic.fit(subtrain_x, subtrain_y)\n",
+    "    predict = logic.predict(tune_x)\n",
+    "    acc = sum(np.equal(predict, tune_y)) / tune_y.shape[0]\n",
+    "    tune_acc.append(acc)\n",
+    "    print(f'test accuracy: {acc}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "predict & show test accuracy and learned w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test accuracy: 0.847675962815405\n",
+      "w: [ 2.54757306e-02  7.51944312e-07  3.19092342e-01  3.17319913e-04\n",
+      "  6.40115460e-04  2.95135991e-02  7.66990116e-01  7.62915465e-02\n",
+      "  2.68338059e-01  4.43128005e-01 -2.20821080e-01 -4.63422172e-02\n",
+      " -1.28758443e+00  2.18992475e-01 -2.26138731e-03  2.18816236e-02\n",
+      "  9.74981437e-01  7.54034100e-01  2.92224730e-01  2.93070078e-01\n",
+      " -4.19612080e-01 -1.04346489e-01 -1.12963414e-01 -3.78240642e-02\n",
+      "  3.76517836e-02 -7.30516163e-02 -2.08394383e+00  1.86338344e-01\n",
+      "  5.48283061e-02 -5.72016463e-01  1.82571096e+00  1.39641689e+00\n",
+      " -5.47067026e-01 -1.05936562e+00 -6.55642151e-01 -3.88036591e-01\n",
+      "  2.36234456e-01  3.00253533e-01  1.03825745e+00 -7.52669809e-01\n",
+      " -4.53424415e-01 -2.69071693e-02 -5.82347571e-01 -2.00233647e+00\n",
+      "  7.51037233e-01  8.27361969e-01  5.28330008e-01  8.95057963e-01\n",
+      "  1.45241841e-01 -8.34438407e-02  2.32699144e-01 -5.92702337e-01\n",
+      " -9.22764551e-01  1.11240624e-01  1.25497096e+00 -3.83664192e-01\n",
+      "  4.13058381e-01  4.13741738e-02 -2.63868161e-01  1.93099799e-01\n",
+      " -4.29102319e-01  4.29102319e-01  1.18913496e+00  5.50823608e-01\n",
+      " -4.76703525e-01 -1.45906500e+00  5.82266265e-01 -1.06198153e+00\n",
+      " -9.41603138e-03 -3.18451360e-01  5.24213674e-01  7.29262555e-01\n",
+      "  6.74417681e-01 -6.38233985e-01 -9.70381962e-03  1.74242999e-01\n",
+      " -2.36216831e-01  3.80746796e-02  1.00364760e-01 -2.47188688e-01\n",
+      "  2.38206932e-01  6.41987678e-01  1.00609330e+00  2.33159552e-01\n",
+      "  4.22778121e-01 -3.53092076e-01 -2.90744306e-01 -3.80716116e-01\n",
+      " -9.62423327e-01 -4.49692076e-01  5.13214009e-01  2.19832864e-01\n",
+      "  2.27002285e-01 -5.01169772e-02 -1.79082775e-02 -9.59642147e-01\n",
+      "  1.67395334e-02 -3.27257717e-01 -1.39435386e-01  4.28358923e-01\n",
+      " -8.46069990e-01  7.51083220e-01 -9.31135045e+00]\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
